# buzur-python

./: README.md  pyproject.toml
buzur/: __init__.py  amplification_scanner.py  authority_scanner.py  behavior_scanner.py  buzur_logger.py  canister_scanner.py  chain_scanner.py  check_wiring.py  conditional_scanner.py  disproportionate_scanner.py  evasion_scanner.py  image_scanner.py  loop_scanner.py  mcp_output_scanner.py  mcp_scanner.py  memory_scanner.py  persistent_memory_scanner.py  prompt_defense_scanner.py  rag_scanner.py  scanner.py  semantic_scanner.py  suffix_scanner.py  tool_shadow_scanner.py  url_scanner.py
logs/: buzur-threats.jsonl
tests/: test_all.py
